--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@
 @media only screen and (min-width:300px) and (max-width:767px) {
     .slider-header {
         font-size: 20px;
+        margin-bottom: 0;
+    }
+
+    .slider-info {
+        padding-bottom: 0;
+        margin-bottom: -50px;
+    }
+
+    .slider-text {
+        margin-bottom: -20px;
     }
 
 }
